# bedaisy-bypass

./: CMakeLists.txt  readme.md
cmake/: FindWdk.cmake
src/: main.cpp  pch.h
src/driver/: driver.cpp  driver.h
src/driver/anticheat/: battleye.cpp  battleye.h
src/driver/hooks/: execute_syscall.cpp  hooks.h  nt_create_file.cpp  nt_read_file.cpp
src/util/: util.cpp  util.h
